chore: ajustes para deploy

--- a/back-end/package.json
+++ b/back-end/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "start": "node ./api/server-mongodb.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,7 +14,10 @@
   "dependencies": {
     "axios": "^1.7.9",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongodb": "6.7"
+    "hashtag-full-stack": "file:..",
+    "mongodb": "6.7",
+    "path": "^0.12.7"
   }
 }
